# eu-ai-gdpr-rag

./: .dockerignore  .env.example  .firebaserc  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SCRIPTS_README.md  blog.md  cleanup-images.ps1  deploy-backend.ps1  deploy-frontend.ps1  docker-compose.yml  firebase.json  pyproject.toml  setup-firebase.ps1  setup-gcp.ps1  start-servers.ps1  tasks.md
.firebase/: hosting.cHVibGlj.cache
data/: knowledge_graph.pkl
data/chroma/bd9d85cb-7359-4f6d-9088-472cda167936/: index_metadata.pickle
data/chroma/d21fca8e-3691-4556-a41a-6a02385fd19a/: index_metadata.pickle
data/golden_qa/: compliance_test_set.json
data/processed/: eu_ai_act_articles.json  gdpr_articles.json
data/reports/: baseline_report.md  final_evaluation_report.json  final_rag_report.md  hybrid_report.md  hybrid_search.md  hyde_report.md  phase2_report.md  phase3_graph_report.json  phase3_report.md  ragas_report.csv  ragas_report.md  retrieval_methods_catalog.md  smart_graph_report.json  smart_graph_report.md
data/reports/raw/: ai_act.html  gdpr.html
public/: 404.html
scripts/: download_data.py  ingest_advanced.py  list_models.py  parse_data.py
setup/: AIML Python Project Best Practices.md  AIML_Stack_Decision_Matrix.md
src/data/: advanced_chunking.py  chunking.py  graph_builder.py  ingestion.py  verify_ingestion.py
src/evaluation/: evaluator.py  ragas_eval.py
src/generation/: generator.py  prompts.py
src/retrieval/: hybrid_search.py  hyde_retriever.py  parent_child_retriever.py  reranker.py  retriever.py
src/serving/: api.py
src/utils/: config.py  cost_tracker.py  embeddings.py  error_handling.py  logging.py
ui/: .dockerignore  Dockerfile  package-lock.json  package.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/components/: ConfidenceMeter.tsx  DeepDiveModal.tsx  GraphVisualizer.tsx  ReferencePanel.tsx
