[project]
name = "eu-ai-gdpr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.4.0",
    "fastapi>=0.109.0",
    "google-genai>=0.2.0",
    "google-generativeai>=0.3.0",
    "langchain>=0.1.0",
    "langchain-google-genai>=0.0.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.0",
    "sentence-transformers>=2.3.0",
    "tiktoken>=0.5.0",
    "torch>=2.2.0",
    "transformers>=4.30.0",
    "uvicorn>=0.27.0",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.12.0",
    "docling>=1.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-snapshot>=0.9.0",
    "ragas>=0.1.0",
    "ruff>=0.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=src", "--cov-report=term-missing"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }


